# ffmpeg_learn

./: .gitignore  CMakeLists-bak.txt  CMakeLists.txt  README.md  script.sh
src/: CameraToH264.cpp  CameraToRtmp.cpp  flvToRTMP.cpp  main.cpp
